--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-pdf": "^7.5.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-ui-animate": "^2.0.0",
