--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "sass": "^1.69.7",
     "tailwindcss": "^3.3.5"
   }
 }
