--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.12.1",
     "@react-spring/web": "^9.7.3",
     "@smakss/react-scroll-direction": "^3.1.4",
     "@testing-library/jest-dom": "^5.17.0",
